--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
+    "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^6.8.0",
     "eslint-config-standard-with-typescript": "^16.0.0",
@@ -31,5 +32,8 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
